# mkxz

./: .-22-02-2024-05-00-02.json  .SRCINFO  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  CMakePresets.min.json  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  PKGBUILD  Pipfile  README.html  README.md  cmake_install.cmake  file_index.json  file_index.min.json  file_index.txt  mkxz-2.1-1-any.pkg.tar.zst  mkxz-28-12-2023-12-07-16.tar.xz  mkxz.zsh  mkxz.zsh.zwc  modified_mkxz.zsh  package-lock.json  package.json  requirements.txt  zcompile.zsh
pkg/mkxz/: .BUILDINFO  .MTREE  .PKGINFO
src/mkxz-aur/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  PKGBUILD  cmake_install.cmake  jtree.js  mkxz.zsh  mkxz.zsh.zwc  modified_mkxz.zsh.zwc
